# BMO-project

./: .gitignore  README.md
brain/: README.md  langgraph.json  pyproject.toml
brain/src/bmo_brain/: __init__.py  __main__.py  config.py  face_adapter.py  face_contract.py  graph.py  nodes.py  protocol.py  runner.py  server.py  state.py
face/: README.md  package-lock.json  package.json  tsconfig.json
face/public/: index.html
face/src/: App.css  App.tsx  index.css  index.tsx
face/src/components/: BmoSpeech.css  BmoSpeech.tsx  ConnectionStatus.css  ConnectionStatus.tsx
face/src/components/BmoEyes/: BmoEyes.css  BmoEyes.tsx  index.ts
face/src/components/BmoFace/: BmoFace.css  BmoFace.tsx  index.ts
face/src/components/BmoMouth/: BmoMouth.css  BmoMouth.tsx  index.ts
face/src/components/BrainInput/: BrainInput.css  BrainInput.tsx  index.ts
face/src/components/ColorCalibration/: ColorCalibration.css  ColorCalibration.tsx  index.ts
face/src/components/ExpressionTester/: ExpressionTester.css  ExpressionTester.tsx
face/src/contracts/: faceContract.json  faceContract.ts
face/src/services/: socket.ts
